--- a/src/Components/Homepage.css
+++ b/src/Components/Homepage.css
@@ -30,7 +30,7 @@ body {
 .btnsdiv {
   position: absolute;
   left: 70px;
-  top: 140px;
+  top: 170px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -45,14 +45,14 @@ body {
   border: none;
   border-radius: 15px;
   width: 330px;
-  height: 25px;
+  height: 30px;
   color: white;
 }
 .Finalbtns {
   display: flex;
   position: absolute;
   top: 300px;
-  left: 260px;
+  left: 200px;
   gap: 15px;
 }
 .Preview {
@@ -66,7 +66,8 @@ body {
 }
 .Preview,
 .Next,
-.Quit {
+.Quit,
+.Finish {
   border: none;
   width: 90px;
   height: 30px;
